// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests DropdownSelector/MenuList Basic 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  list-style: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c2:hover,
.c2:focus,
.c2:focus-within {
  background-color: var(--charcoal-surface3);
}

<div
  data-dark={false}
>
  <ul
    className="c0"
  >
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="0"
      >
        Menu 
        0
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="1"
      >
        Menu 
        1
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="2"
      >
        Menu 
        2
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="3"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="3"
      >
        Menu 
        3
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="4"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="4"
      >
        Menu 
        4
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="5"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="5"
      >
        Menu 
        5
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="6"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="6"
      >
        Menu 
        6
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="7"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="7"
      >
        Menu 
        7
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="8"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="8"
      >
        Menu 
        8
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="9"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="9"
      >
        Menu 
        9
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storybook Tests DropdownSelector/MenuList Disabled 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  list-style: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c2:hover,
.c2:focus,
.c2:focus-within {
  background-color: var(--charcoal-surface3);
}

<div
  data-dark={false}
>
  <ul
    className="c0"
  >
    <li
      className="c1"
      role="option"
    >
      <div
        className="c2"
        data-key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="1"
      >
        MenuItem
      </div>
    </li>
    <li
      className="c1"
      role="option"
    >
      <div
        aria-disabled={true}
        className="c2"
        data-key="2"
        disabled={true}
        onKeyDown={[Function]}
        tabIndex={-1}
        value="2"
      >
        Disabled MenuItem
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storybook Tests DropdownSelector/MenuList Group 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: block;
  color: var(--charcoal-text3);
  font-size: 12px;
  font-weight: bold;
  padding: 12px 0 8px 16px;
}

.c3 {
  padding-left: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  overflow: hidden;
}

.c1 {
  display: block;
}

.c4 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c5:disabled,
.c5[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c5:hover,
.c5:focus,
.c5:focus-within {
  background-color: var(--charcoal-surface3);
}

<div
  data-dark={false}
>
  <ul
    className="c0"
  >
    <li
      className="c1"
      role="presentation"
    >
      <span
        className="c2"
      >
        Section1
      </span>
      <ul
        className="c3"
        role="group"
      >
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="0"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="0"
          >
            Menu 
            0
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="1"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="1"
          >
            Menu 
            1
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="2"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="2"
          >
            Menu 
            2
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="3"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="3"
          >
            Menu 
            3
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="4"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="4"
          >
            Menu 
            4
          </div>
        </li>
      </ul>
    </li>
    <li
      className="c1"
      role="presentation"
    >
      <span
        className="c2"
      >
        Section2
      </span>
      <ul
        className="c3"
        role="group"
      >
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="5"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="5"
          >
            Menu 
            5
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="6"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="6"
          >
            Menu 
            6
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="7"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="7"
          >
            Menu 
            7
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="8"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="8"
          >
            Menu 
            8
          </div>
        </li>
        <li
          className="c4"
          role="option"
        >
          <div
            className="c5"
            data-key="9"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            value="9"
          >
            Menu 
            9
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
